<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/infohardware"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/sensorph"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="138dp" />

        <ImageView
            android:layout_width="214dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sensorph"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="173dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penjelasanph"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bphmeter"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bagianphmeter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/bp1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/bp2"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/bp3"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/bp4"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/bp5"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensoroksigen"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="254dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sensoroksigen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/o1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensorwarna"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="157dp"
            android:layout_height="161dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sensorwarna" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/o1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_sensor_ec"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="157dp"
            android:layout_height="161dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sensor_ec" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/sensor_electrical_conductivity_yang_digunakan_adalah_df_robot_dfr0300_gravity_analog_electrical_conductivity_sensor_meter_v2_memiliki_akurasi_dengan_besaran_error_hanya_sebesar_5"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_sensor_tds"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="157dp"
            android:layout_height="161dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sensor_tds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/sensor_electrical_conductivity_yang_digunakan_adalah_df_robot_sen0244_gravity_analog_tds_sensor_memiliki_akurasi_dengan_besaran_error_hanya_sebesar_kurang_dari_10"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>